# bookstore

./: .gitignore  Dockerfile  Dockerfile-original  README.md  db.sqlite3  docker-compose.yml  heroku.yml  poetry.py  pyproject-ULTIMO-RODANDO.toml  pyproject-antigo.toml  pyproject-docker-2023.toml  pyproject.toml  requirements.txt
bookstore/: db.sqlite3  settings.py  urls.py
bookstore../: settings.py
bookstore/bookstore/: exe-bule.py  exe04.py  settings.py  urls.py
bookstore/order/migrations/: 0001_initial.py
bookstore/order/serializers/: order_serializer.py
bookstore/order/tests/test_viewsets/: test_category_viewset.py  test_order_viewset.py
bookstore/order/viewsets/: category_viewset.py
bookstore/product/: admin.py
bookstore/product/migrations/: 0001_initial.py  0002_rename_active_category_activate_and_more.py
bookstore/product/models/: category.py  product.py
bookstore/product/serializers/: category_serializer.py
bookstore/product/viewsets/: category_viewset.py
controle/: db.sqlite3
mysite/mysite/: settings.py
order/: factories.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/test_serializers/: test_order_serializer.py
order/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
order/viewsets/: __init__.py
product/: x.html
product/serializers/: category_serializer.py  product_serializer.py
product/tests/test_serializers/: test_category_serializer.py  test_product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
