[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "docker"
authors = ["Patrick Passarella <pshaggy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
django-rest-framework = "^0.1.0"
django-extensions = "^3.2.1"
django-debug-toolbar = "^4.0.0"
gunicorn = "^20.1.0"
whitenoise = "^6.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
